# CHATBOT

./: .env copy.example  .gitignore  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  STAGE3_SUMMARY.md  STAGE4_SUMMARY.md  admin_cli.py  docker-compose.yml  main.py  main_orchestrated.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: knowledge_base.md  parking.db
docs/: LANGCHAIN_1.0_UPGRADE.md  presentation.md
src/api/: server.py
src/chatbot/: admin_agent.py  admin_agent_final.py  agent.py  agent_langgraph.py  channels.py  escalation.py  tools.py
src/config/: settings.py
src/core/: llm_handler.py  llm_langchain_adapter.py  rag_engine.py  rag_engine_langchain.py  rag_engine_standard.py  vector_store.py
src/data/: dynamic_data.py  reservation_manager.py  reservation_state.py  schemas.py  static_data.py
src/evaluation/: metrics.py  performance.py
src/guards/: filters.py  railguard.py
src/mcp/: __init__.py  server.py
src/orchestration/: __init__.py  graph.py
tests/: integration_test.py  test_admin_system.py  test_chatbot.py  test_evaluation.py  test_guards.py  test_mcp_server.py  test_orchestration.py  test_orchestration_basic.py  test_rag_engine.py  test_vector_store.py
